--- a/apps/teaparty/tp/web/views/header.html
+++ b/apps/teaparty/tp/web/views/header.html
@@ -10,7 +10,7 @@
 
 <body>
         <script type="text/javascript">
-        $(function() {
+        $(document).ready(function() {
                 $("#tabs").tabs();
         });
         </script>
