--- a/apps/teaparty/tp/web/views/header.html
+++ b/apps/teaparty/tp/web/views/header.html
@@ -4,19 +4,14 @@
   <title>${name}</title>
 
  <link type="text/css" href="/static/css/sunny/jquery-ui-1.8.2.custom.css" rel="stylesheet" />
- <script type="text/javascript" src="/static/js/jquery-ui-1.8.2.custom.min.js"></script>
  <script type="text/javascript" src="/static/js/jquery-1.4.2.min.js"></script>
+ <script type="text/javascript" src="/static/js/jquery-ui-1.8.2.custom.min.js"></script>
 </head>
 
 <body>
-        <script type="text/javascript">
-        $(document).ready(function() {
-                $("#tabs").tabs();
-        });
-        </script>
 
 
-<div class="demo">
+<div class="content">
 
 <div id="tabs">
 	<ul>
@@ -36,4 +31,11 @@
 	</div>
 </div>
 
-</div><!-- End demo -->
+</div>
+
+      <script type="text/javascript">
+        $(document).ready(function() {
+                $("#tabs").tabs();
+        });
+        </script>
+
