updating pages and such

--- a/apps/teaparty/tp/web/views/footer.html
+++ b/apps/teaparty/tp/web/views/footer.html
@@ -1,2 +1,22 @@
+
+ 
+<!-- <div class="span-7 last">
+      <h1 class="fancy">navigation</h1>
+        <code>print('projects below');</code>
+        <dl>
+                <dd> ?? </dd>
+        </dl>
+
+    </div>
+    -->
+
+ <div class="span-24 last" >
+    <p>&nbsp;</p>
+    <p class="fancy">code for this project can be found at <a href="http://github.com/driedtoast/teaparty">teaparty</a></p>
+ </div>
+ 
+
+</div>
+
 </body>
 </html>
