--- a/apps/teaparty/tp/web/views/header.html
+++ b/apps/teaparty/tp/web/views/header.html
@@ -6,6 +6,8 @@
  <link type="text/css" href="/static/css/sunny/jquery-ui-1.8.2.custom.css" rel="stylesheet" />
  <script type="text/javascript" src="/static/js/jquery-1.4.2.min.js"></script>
  <script type="text/javascript" src="/static/js/jquery-ui-1.8.2.custom.min.js"></script>
+ <script type="text/javascript" src="/static/js/sammy-0.5.4.min.js" charset="utf-8"></script>
+ <script type="text/javascript" src="/static/js/plugins/sammy.template-latest.min.js" charset="utf-8"></script>
  
   <link rel="stylesheet" href="/static/css/bluetrip/screen.css" type="text/css" media="screen, projection">
   <link rel="stylesheet" href="/static/css/bluetrip/print.css" type="text/css" media="print">
@@ -14,7 +16,7 @@
   <![endif]-->
   <link rel="stylesheet" href="/static/css/bluetrip/style.css" type="text/css" media="screen, projection">
 
- 
+  
  
  
 </head>
