--- a/static/css/bluetrip/style.css
+++ b/static/css/bluetrip/style.css
@@ -25,6 +25,11 @@
 /**************************************/
 /*              HEADER                */
 /**************************************/
+.topheader {
+    background-color: #e2e2e2;
+    color: #666666;
+    padding-left: 1em;
+}
 
 
 
