--- a/apps/teaparty/tp/web/views/header.html
+++ b/apps/teaparty/tp/web/views/header.html
@@ -9,13 +9,19 @@
  <script type="text/javascript" src="/static/js/sammy-0.5.4.min.js" charset="utf-8"></script>
  <script type="text/javascript" src="/static/js/plugins/sammy.template-latest.min.js" charset="utf-8"></script>
  
+ <script type="text/javascript" src="/static/js/hoverIntent.js"></script>
+ <script type="text/javascript" src="/static/js/superfish.js"></script>
+ <script type="text/javascript" src="/static/js/supersubs.js"></script>
+ 
+ 
   <link rel="stylesheet" href="/static/css/bluetrip/screen.css" type="text/css" media="screen, projection">
   <link rel="stylesheet" href="/static/css/bluetrip/print.css" type="text/css" media="print">
   <!--[if IE]>
      <link rel="stylesheet" href="/static/css/bluetrip/ie.css" type="text/css" media="screen, projection">
   <![endif]-->
   <link rel="stylesheet" href="/static/css/bluetrip/style.css" type="text/css" media="screen, projection">
-
+    
+ <link rel="stylesheet" href="/static/css/superfish/style.css" type="text/css" media="screen, projection">
   
  
  
@@ -23,10 +29,54 @@
 
 <body>
 
+
+ 
+ 
+
+
+
+
+ <div class="container topheader">
+     <div class="span-11"><p class="small">teaparty</p></div>
+    <div class="span-12 last"><ul class="sf-menu small">
+        <li><a href="/">dashboard</a></li>
+        <li><a href="/jobs/flows">job flow list</a>
+             <ul>
+               <li><a href="#" >another one</a></li>
+             </ul>
+        
+        </li>
+      </ul>
+       </div>
+ </div>
+
+
+
+
+
  <div class="container">
-    <div class="span-16"><h1>teaparty</h1>
-    <p class="fancy">have a dose of amazon petifores</p></div>
-    <div class="span-7 last"><p>
-      <a href="/">dashboard</a>
+    <div class="span-16">
+    <p class="fancy">have a dose of amazon petifores</p>
+    <div class="span-7 last">
+    
+      <p>
+      <a href="/">dashboard</a> | <a href="/jobs/flows">job flow list</a>
        </p>
     </div>
+
+
+
+
+
+<script type="text/javascript"> 
+    $(document).ready(function(){ 
+        $("ul.sf-menu").supersubs({ 
+            minWidth:    12,   // minimum width of sub-menus in em units 
+            maxWidth:    27,   // maximum width of sub-menus in em units 
+            extraWidth:  1     // extra width can ensure lines don't sometimes turn over 
+                               // due to slight rounding differences and font-family 
+        }).superfish();  // call supersubs first, then superfish, so that subs are 
+                         // not display:none when measuring. Call before initialising 
+                         // containing tabs for same reason. 
+    }); 
+</script>
