--- a/apps/teaparty/tp/web/views/header.html
+++ b/apps/teaparty/tp/web/views/header.html
@@ -8,10 +8,13 @@
  <script type="text/javascript" src="/static/js/jquery-ui-1.8.2.custom.min.js"></script>
  <script type="text/javascript" src="/static/js/sammy-0.5.4.min.js" charset="utf-8"></script>
  <script type="text/javascript" src="/static/js/plugins/sammy.template-latest.min.js" charset="utf-8"></script>
- 
+ <script type="text/javascript" src="/static/js/jquery.ui.potato.menu.js"></script>
+  <link rel="stylesheet" href="/static/css/potatomenu/jquery.ui.potato.menu.css" type="text/css" media="screen, projection">
+  
+ <!--
  <script type="text/javascript" src="/static/js/hoverIntent.js"></script>
  <script type="text/javascript" src="/static/js/superfish.js"></script>
- <script type="text/javascript" src="/static/js/supersubs.js"></script>
+ <script type="text/javascript" src="/static/js/supersubs.js"></script> -->
  
  
   <link rel="stylesheet" href="/static/css/bluetrip/screen.css" type="text/css" media="screen, projection">
@@ -21,8 +24,7 @@
   <![endif]-->
   <link rel="stylesheet" href="/static/css/bluetrip/style.css" type="text/css" media="screen, projection">
     
- <link rel="stylesheet" href="/static/css/superfish/style.css" type="text/css" media="screen, projection">
-  
+
  
  
 </head>
@@ -38,7 +40,7 @@
 
  <div class="container topheader">
      <div class="span-11"><p class="small">teaparty</p></div>
-    <div class="span-12 last"><ul class="sf-menu small">
+    <div class="span-12 last"><ul id="menu1" class="small">
         <li><a href="/">dashboard</a></li>
         <li><a href="/jobs/flows">job flow list</a>
              <ul>
@@ -68,15 +70,8 @@
 
 
 
-<script type="text/javascript"> 
-    $(document).ready(function(){ 
-        $("ul.sf-menu").supersubs({ 
-            minWidth:    12,   // minimum width of sub-menus in em units 
-            maxWidth:    27,   // maximum width of sub-menus in em units 
-            extraWidth:  1     // extra width can ensure lines don't sometimes turn over 
-                               // due to slight rounding differences and font-family 
-        }).superfish();  // call supersubs first, then superfish, so that subs are 
-                         // not display:none when measuring. Call before initialising 
-                         // containing tabs for same reason. 
-    }); 
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('#menu1').ptMenu();
+  }); 
 </script>
