--- a/static/css/bluetrip/style.css
+++ b/static/css/bluetrip/style.css
@@ -43,7 +43,37 @@
 /*            MAIN CONTENT            */
 /**************************************/
 
-
+dataTables_wrapper { position: relative; min-height: 302px; _height: 302px; clear: both; }
+.dataTables_processing { position: absolute; top: 0px; left: 50%; width: 250px; margin-left: -125px; border: 1px solid #ddd; text-align: center; color: #999; font-size: 11px; padding: 2px 0; }
+.dataTables_length { width: 40%; float: left; }
+.dataTables_filter { width: 50%; float: right; text-align: right; }
+.dataTables_info { width: 40%; float: left; padding-top: 10px; }
+.dataTables_paginate { width: 44px; * width: 50px; float: right; text-align: right; padding-top: 10px; }
+.paginate_disabled_previous, .paginate_enabled_previous, .paginate_disabled_next, .paginate_enabled_next { height: 19px; width: 19px; margin-left: 3px; float: left; }
+.paginate_disabled_previous { background-image: url('../datatable/images/back_disabled.jpg'); }
+.paginate_enabled_previous { background-image: url('../datatable/images/back_enabled.jpg'); }
+.paginate_disabled_next { background-image: url('../datatable/images/forward_disabled.jpg'); }
+.paginate_enabled_next { background-image: url('../datatable/images/forward_enabled.jpg'); }
+table.display { margin: 0 auto; width: 100%; clear: both; }
+table.display thead th { padding: 3px 10px; cursor: pointer; * cursor: hand; font-size: 0.8em; }
+table.display tfoot th { padding: 3px 10px; border-top: 1px solid black; font-weight: bold; }
+table.display tr.heading2 td { border-bottom: 1px solid #aaa; }
+table.display td { padding: 3px 10px; font-size: 0.8em; }
+table.display td.center { text-align: center; }
+tr.odd { background-color: #eceadf; }
+tr.even { background-color: white; }
+.sorting_asc { background: url('../datatable/images/sort_asc.jpg') no-repeat center right; }
+.sorting_desc { background: url('../datatable/images/sort_desc.jpg') no-repeat center right; }
+.sorting { background: url('../datatable/images/sort_both.jpg') no-repeat center right; }
+.dataTables_info { float: none; }
+tfoot input { margin: 0.5em 0; width: 100%; color: #444; }
+tfoot input.search_init { color: #999; }
+tr.odd td.sorting_1 { background-color: #CBC7BD; }
+tr.odd td.sorting_2 { background-color: #DADCFF; }
+tr.odd td.sorting_3 { background-color: #E0E2FF; }
+tr.even td.sorting_1 { background-color: #eceadf; }
+tr.even td.sorting_2 { background-color: #F2F3FF; }
+tr.even td.sorting_3 { background-color: #F9F9FF; }
 
 /**************************************/
 /*               FOOTER               */
