--- a/apps/teaparty/tp/web/views/header.html
+++ b/apps/teaparty/tp/web/views/header.html
@@ -3,26 +3,23 @@
 <head>
   <title>${name}</title>
 
- <link type="text/css" href="/static/css/sunny/jquery-ui-1.8.2.custom.css" rel="stylesheet" />
+ <link type="text/css" href="/static/css/pepper-grinder/jquery-ui-1.8.2.custom.css" rel="stylesheet" />
  <script type="text/javascript" src="/static/js/jquery-1.4.2.min.js"></script>
  <script type="text/javascript" src="/static/js/jquery-ui-1.8.2.custom.min.js"></script>
  <script type="text/javascript" src="/static/js/sammy-0.5.4.min.js" charset="utf-8"></script>
  <script type="text/javascript" src="/static/js/plugins/sammy.template-latest.min.js" charset="utf-8"></script>
  <script type="text/javascript" src="/static/js/jquery.ui.potato.menu.js"></script>
-  <link rel="stylesheet" href="/static/css/potatomenu/jquery.ui.potato.menu.css" type="text/css" media="screen, projection">
+ <script type="text/javascript" src="/static/js/jquery.dataTables.min.js"></script>
+ 
+  <link rel="stylesheet" href="/static/css/potatomenu/jquery.ui.potato.menu.css" type="text/css" media="screen, projection"> 
   
- <!--
- <script type="text/javascript" src="/static/js/hoverIntent.js"></script>
- <script type="text/javascript" src="/static/js/superfish.js"></script>
- <script type="text/javascript" src="/static/js/supersubs.js"></script> -->
- 
- 
-  <link rel="stylesheet" href="/static/css/bluetrip/screen.css" type="text/css" media="screen, projection">
-  <link rel="stylesheet" href="/static/css/bluetrip/print.css" type="text/css" media="print">
+   <link rel="stylesheet" href="/static/css/bluetrip/screen.css" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="/static/css/bluetrip/print.css" type="text/css" media="print"> 
   <!--[if IE]>
      <link rel="stylesheet" href="/static/css/bluetrip/ie.css" type="text/css" media="screen, projection">
   <![endif]-->
   <link rel="stylesheet" href="/static/css/bluetrip/style.css" type="text/css" media="screen, projection">
+  <!-- <link rel="stylesheet" href="http://www.datatables.net/media/css/site_jui.ccss" type="text/css" media="screen, projection">  -->
     
 
  
@@ -39,7 +36,7 @@
 
 
  <div class="container topheader">
-     <div class="span-11"><p class="small">teaparty</p></div>
+     <div class="span-11"><span class="small">teaparty</span></div>
     <div class="span-12 last"><ul id="menu1" class="small">
         <li><a href="/">dashboard</a></li>
         <li><a href="/jobs/flows">job flow list</a>
@@ -59,6 +56,7 @@
  <div class="container">
     <div class="span-16">
     <p class="fancy">have a dose of amazon petifores</p>
+    </div>
     <div class="span-7 last">
     
       <p>
